--- a/style.css
+++ b/style.css
@@ -126,6 +126,8 @@ button {
 .cta {
   padding: 50px 0px 0px 0px;
   margin-top: 30px;
+  margin-left: 50px;
+  padding-left: 30px;
 }
 
 .cta-select {
@@ -134,6 +136,7 @@ button {
   height: 50px;
   width: 150px;
   font-size: 16px;
+  margin-left: 30px;
 }
 
 .cta-add {
@@ -143,12 +146,65 @@ button {
   width: 150px;
   font-size: 16px;
   border: none;
-  margin-left: 30px;
+
+}
+.cta-add: hover{
+  background-color: white;
 }
 
 .cover {
   flex: 0.5;
 }
+/* The Modal (background) */
+.modal {
+ display: none; /* Hidden by default */
+ position: fixed; /* Stay in place */
+ z-index: 1; /* Sit on top */
+ left: 20%;
+ top: 0;
+ width: 60%; /* Full width */
+ height: 60%; /* Full height */
+ overflow: none; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(1,0,0,0.4); /* Black w/ opacity */
+animation: modal ease 0.2s;
+
+}
+.verified img{
+  height: 20%;
+  width: 20%
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: white;
+ margin: 15% auto; /* 15% from the top and centered */
+ padding: 20px;
+ border: 1px solid #888;
+ width: 80%; /* Could be more or less, depending on screen size */
+ text-align: center;
+ border-radius: 4px;
+
+}
+.modal-content span, img, p{
+  animation: complete ease 1s;
+}
+
+/* The Close Button */
+.close {
+ color: #aaa;
+ float: right;
+ font-size: 28px;
+ font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+ color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 @keyframes drop {
   0%{
     opacity: 0;
@@ -159,6 +215,26 @@ button {
     transform: translateY(0px);
   }
 }
+@keyframes modal {
+  0%{
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  100%{
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@keyframes complete {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+
 @media screen and (max-width: 1024px){
 .presentation{
   flex-direction: column;
